# Data-Analysis

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  Snakefile  appveyor.yml  build.cmd  build.ps1  build.sh  install.ps1  install.sh  makefile  plots.snakemake
lib/: QDA.hpp  ReplicatedFBP.hpp  ReplicatedSGD.hpp  classifier.hpp  clustering.hpp  coo_matrix.hpp  cross_validation.hpp  csr_matrix.hpp  cv_classifier.hpp  density_clustering.hpp  diagQDA.hpp  dimensionality_reduction.hpp  fmath.hpp  fstat.hpp  genetic.hpp  graph.hpp  grid_search.hpp  hyperparams.hpp  kabsch.hpp  kmeans.hpp  linalg.hpp  meta_programming.hpp  metrics.hpp  neural_network.hpp  os.hpp  parse_args.hpp  patterns.hpp  perceptron.hpp  points.hpp  sbcsr_matrix.hpp  score_coef.hpp  sparse.hpp  timing_func.hpp
tst/: runtest_bayes_cls.cpp  runtest_bcrfbp.cpp  runtest_bcrsgd.cpp  runtest_clustering.cpp  runtest_cv.cpp  runtest_fstat.cpp  runtest_genetic.cpp  runtest_gridGA.cpp  runtest_kabsch.cpp  runtest_nn.cpp  runtest_pca.cpp
tst/pattern/: 3d_points_1.xyz  3d_points_2.xyz
